<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layoutDirection="ltr"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="370dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_textview_title"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="phone"
        android:id="@+id/edCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edSurf"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/edSurf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edCall" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/edEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSurf" />

    <Button
        android:onClick="callBtnClicked"
        android:backgroundTint="#AEACAC"
        android:textAllCaps="false"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/activity_main_button_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="surfBtnClicked"
        android:backgroundTint="#AEACAC"
        android:textAllCaps="false"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/activity_main_button_surf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:onClick="emailBtnClicked"
        android:backgroundTint="#AEACAC"
        android:textAllCaps="false"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:text="@string/activity_main_button_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#AEACAC"
        android:onClick="registerBtnClicked"
        android:text="@string/activity_main_button_register"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:textSize="16dp"
        android:textColor="@color/white"
        android:id="@+id/txtRegister"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>